--- a/mock-auth-service/src/templates/film_together.html
+++ b/mock-auth-service/src/templates/film_together.html
@@ -1,20 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<!--    <div class="container">-->
-<!--		<div class="row gy-5">-->
-<!--			<form action="{{ url_for('film_together') }}" method="post">-->
-<!--				<div class="form-group mb-3 col-md-8 offset-md-2">-->
-<!--					<label for="input-film-id">film_id</label>-->
-<!--					<input class="form-control mt-1" id="input-film-id" type="text" required name="film_id" placeholder="Film_id" autofocus value="ff285a7d-6d87-41a2-9573-09558c3efac6">-->
-<!--				</div>-->
-
-<!--				<div class="offset-md-2">-->
-<!--					<input class="btn btn-primary" type="submit" value="Film Together">-->
-<!--				</div>-->
-<!--			</form>-->
-<!--		<div>-->
-<!--	</div>-->
 
 <div class="conteiner-fluid mx-4">
 	<input type="text" id="user_id" value="{{ user_id }}" hidden>
@@ -31,7 +17,7 @@
 		<!-- Film 2 -->
 		<div class=" t2 col-sm-6 col-md-6 col-lg-2 mb-10 mt-2">
 			<img src="{{ url_for('static', path='/img/t2.png') }}" class="img-fluid rounded" alt="t1">
-			<button class="btn btn-primary mt-2" onclick="">Watch together</button>
+			<button class="btn btn-primary mt-2" onclick="createParty(event)" id="ff285a7d-6d87-41a2-9573-09558c3efac7">Watch together</button>
 		</div>
 		<div class=" t2 col-sm-6 col-md-6 col-lg-4 mb-10 mt-2">
 			<div>A cyborg, identical to the one who failed to kill Sarah Connor, must now protect her ten year old son John from an even more advanced and powerful cyborg.
@@ -42,11 +28,29 @@
 
 <script>
 	function createParty(event) {
-			film_id = event.srcElement.id;
-			console.log('film_id', film_id);
-			user_id = document.querySelector('#user_id').value;
-			console.log('user_id:', user_id);
-		};
+        user_id = document.querySelector('#user_id').value;
+        film_id = event.srcElement.id;
+
+        party_creation_message = {
+            "film_id": film_id,
+            "users_ids": [user_id]
+        };
+
+        console.log(JSON.stringify(party_creation_message));
+
+        fetch('http://localhost:8002/party-manager-service/api/v1/broker/party-creation', {
+            method: 'POST',
+            headers: {
+            	'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(party_creation_message)
+        })
+        .then(response => response.json())
+        .then(data => {
+            // window.location.replace(data['redirect_url']);
+            window.location.replace('http://localhost:8002/party-manager-service/api/v1/stream/1d42710f-6980-4dd4-8a34-fe0d43e7dede');
+        })
+    };
 </script>
 
 
